--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "expo": "^32.0.0",
     "expo-constants": "2.0",
     "expo-core": "~2.0.0",
+    "expo-react-native-adapter": "^3.0.1",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native": "^0.55.4",
+    "react-navigation": "^3.3.2",
     "webpack": "4.0.0"
   },
   "devDependencies": {
