--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
-    "expo-constants": "2.0",
-    "expo-core": "~2.0.0",
-    "expo-react-native-adapter": "^3.0.1",
+    "expo-cli": "^2.11.7",
     "react": "16.5.0",
-    "react-native": "^0.55.4",
-    "react-navigation": "^3.3.2",
-    "webpack": "4.0.0"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-calendars": "^1.22.0",
+    "react-native-customize-selected-date": "^1.0.1",
+    "react-native-events-calendar": "^1.0.8",
+    "react-native-vector-icons": "^6.3.0",
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "jest-expo": "^32.0.0"
   },
   "private": true
 }
