--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-calendars": "^1.22.0",
     "react-native-customize-selected-date": "^1.0.1",
+    "react-native-device-info": "^1.4.3",
     "react-native-events-calendar": "^1.0.8",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.0.9",
